--- a/templates/_base.html
+++ b/templates/_base.html
@@ -3,12 +3,12 @@
 <head>
     {% block head %}
     <link rel="stylesheet" type=text/css href="static/style.css" />
-    <title>Runemaker</title>
+    <title>Make something</title>
     {% endblock %}
 </head>
 <body>
     <div class="page">
-        <h1>Runemaker</h1>
+        <h1>Makers</h1>
         <div id="content">{% block content %}{% endblock %}</div>
     </div>
 </body>
