Updated frontend to support rolemaker

--- a/templates/error.html
+++ b/templates/error.html
@@ -1,4 +1,4 @@
 {% extends "_base.html" %}
 {% block content %}
-    Error - bad input. The number of pages must be an integer, and the champion list must be a comma seperated string.
+    Error - bad input
 {% endblock %}
