--- a/templates/rolemaker.html
+++ b/templates/rolemaker.html
@@ -1,5 +1,27 @@
 {% extends "_base.html" %}
 {% block content %}
     <h2>This is a tool to help you find a set of champs to play for your role.</h2>
-    <h3>Todo</h3>
+    <p>This tool will generate a champion pool for you based on champion.gg data. 
+        It will also attempt to balance your pool so that it contains champions that can deal
+        both AD and AP damage (unless you choose ADC).</p>
+    <form action="{{ url_for('get_roles') }}" method="post">
+        <dl>
+            <dt>What role do you want to play?</dt>
+            <dd><select name="roleName">
+                <option value="Top">Top</option>
+                <option value="Jungle">Jungle</option>
+                <option value="Middle">Middle</option>
+                <option value="ADC">ADC</option>
+                <option value="Support">Support</option>
+            </select></dd>
+            <dt>How many champs do you want to have in your pool?</dt>
+            <dd><select name="num">
+                {% for n in range(1, 11) %}
+                <option value="{{ n }}">{{ n }}</option>
+                {% endfor %}
+                <option value="1000">Score all</option>
+            </select></dd>
+            <dd><input type="submit" value="Submit"></dd>
+        </dl>
+    </form>
 {% endblock %}
