--- a/templates/rolemaker.html
+++ b/templates/rolemaker.html
@@ -1,27 +1,66 @@
-{% extends "_base.html" %}
-{% block content %}
-    <h2>This is a tool to help you find a set of champs to play for your role.</h2>
-    <p>This tool will generate a champion pool for you based on champion.gg data. 
-        It will also attempt to balance your pool so that it contains champions that can deal
-        both AD and AP damage (unless you choose ADC).</p>
-    <form action="{{ url_for('get_roles') }}" method="post">
-        <dl>
-            <dt>What role do you want to play?</dt>
-            <dd><select name="roleName">
-                <option value="Top">Top</option>
-                <option value="Jungle">Jungle</option>
-                <option value="Middle">Middle</option>
-                <option value="ADC">ADC</option>
-                <option value="Support">Support</option>
-            </select></dd>
-            <dt>How many champs do you want to have in your pool?</dt>
-            <dd><select name="num">
-                {% for n in range(1, 11) %}
-                <option value="{{ n }}">{{ n }}</option>
-                {% endfor %}
-                <option value="1000">Score all</option>
-            </select></dd>
-            <dd><input type="submit" value="Submit"></dd>
-        </dl>
-    </form>
-{% endblock %}
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        {% block head %}
+        <link rel="stylesheet" type=text/css href="static/style.css" />
+        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+        <script type=text/javascript>
+        $SCRIPT_ROOT = {{ request.script_root|tojson|safe }};
+
+        $(function() {
+            $('button#calculate').bind('click', function() {
+                $('#result').text('');
+                $('button#calculate').attr('disabled', 'disabled');
+                $('button#calculate').text('Calculating...');
+
+                $.getJSON($SCRIPT_ROOT + '/_getRolesAJAX', {
+                    'roleName': $('select[name="roleName"]').find(":selected").text(),
+                    'num': $('select[name="num"]').find(":selected").value()
+                }, function(data) {
+                    $("<ol>").appendTo('#result');
+                    $.each( data.champPool, function(i, champ) {
+                        $("<li>").text(champ + "  |  Score: " + data.roleStats[champ]['score']).appendTo('#result ol');
+                    });
+
+                    $('button#calculate').removeAttr('disabled');
+                    $('button#calculate').text('Calculate');
+                });
+                return false;
+            });
+        });
+        </script>
+        <title>Make something</title>
+        {% endblock %}
+    </head>
+    <body>
+        <div class="page">
+            <h1>Makers</h1>
+            <div id="content">
+                <h2>This is a tool to help you find a set of champs to play for your role.</h2>
+                <p>This tool will generate a champion pool for you based on champion.gg data. 
+                It will also attempt to balance your pool so that it contains champions that can deal
+                both AD and AP damage (unless you choose ADC).</p>
+                <dl>
+                    <dt>What role do you want to play?</dt>
+                    <dd><select name="roleName">
+                        <option value="Top">Top</option>
+                        <option value="Jungle">Jungle</option>
+                        <option value="Middle">Middle</option>
+                        <option value="ADC">ADC</option>
+                        <option value="Support">Support</option>
+                    </select></dd>
+                    <dt>How many champs do you want to have in your pool?</dt>
+                    <dd><select name="num">
+                        {% for n in range(1, 11) %}
+                        <option value="{{ n }}">{{ n }}</option>
+                        {% endfor %}
+                        <option value="1000">Score all</option>
+                    </select></dd>
+                </dl>
+                <button id="calculate">Calculate</button>
+                <br />
+                <div id="result"></div>
+            </div>
+        </div>
+    </body>
+</html>
