--- a/templates/_base.html
+++ b/templates/_base.html
@@ -3,6 +3,10 @@
 <head>
     {% block head %}
     <link rel="stylesheet" type=text/css href="static/style.css" />
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+    <script type=text/javascript>
+        $SCRIPT_ROOT = {{ request.script_root|tojson|safe }};
+    </script>
     <title>Make something</title>
     {% endblock %}
 </head>
